# homeautomation-plc

./: .gitignore  .gitlab-ci.yml  .gitmodules  .lua-format  .style.yapf  CMakeLists.txt  Makefile  README.md  conanfile.txt  pytest.ini  vcpkg.json
.conan/: build.profile  rpi4.profile
cmake/: test_helper.cmake
cmake/toolchain/: toolchain-aarch64-rpi3.cmake  toolchain-aarch64-rpi4.cmake  toolchain-armv7hf-rpi2.cmake  toolchain-native.cmake
cmake/toolchain/ct-ng/: .gitignore
cmake/toolchain/ct-ng/linux-aarch64-rpi4/: .config
cmake/toolchain/ct-ng/linux-armv7hf-rpi2/: .config
conan/: rpi2.profile  rpi4.profile
deploy/: .gitignore  basement.yaml  config-sample.yaml  ground.yaml  homeautomation.init.in  roof.yaml
docker/: Dockerfile.build  README.md  ci_logic.sh  docker-compose.yml
examples/: CMakeLists.txt  basement.cpp  ground.cpp  roof.cpp  roof_main_rooflogic.lua
examples/cpp-program/: CMakeLists.txt  cpp-program.cpp  cpp-program.yaml
examples/deploy/: ground.yaml  homeautomation.init.in  roof.yaml
examples/generic/: CMakeLists.txt  README.md  generic.yaml  generic_main_lualogic.lua
examples/generic-inline/: README.md  generic-inline.yaml
examples/generic-inline/src/: Makefile  blind_logic.lua  generic-inline.yaml
integration_test/: test_mqtt.py
src/: CMakeLists.txt  basement.cpp  ground.cpp  roof.cpp
src/common/: CMakeLists.txt  bithelpers.hpp  circular_buffer.hpp  common.hpp  config.hpp  gv.hpp
src/components/: CMakeLists.txt  blind.hpp  blind_state_test.cpp  blind_test.cpp  fsm.hpp  light.hpp  lua.cpp  lua_block.cpp  lua_block_test.cpp  lua_test.cpp  messages_buffer_test.cpp  mqtt.cpp  mqtt.hpp  mqtt_test.cpp  trigger_test.cpp
src/components/test/: assignment.lua
src/entry/: entry.hpp  main.cpp
src/runtime/: CMakeLists.txt  factory_helpers.hpp  gv_factory.cpp  gv_factory.hpp  gv_factory_test.cpp  i2c_factory.cpp  i2c_factory.hpp  io_factory.cpp  io_factory.hpp  io_factory_test.cpp  modbus_factory.cpp  modbus_factory.hpp  modbus_factory_test.cpp  mqtt_factory.cpp  mqtt_factory.hpp  mqtt_impl.cpp  mqtt_io_factory.cpp  mqtt_io_factory.hpp  mqtt_io_factory_test.cpp  program_factory.cpp  program_factory.hpp  runtime.hpp  runtime_factory.cpp  runtime_factory.hpp  runtime_factory_test.cpp  scheduler_factory.cpp  scheduler_factory.hpp  scheduler_factory_test.cpp
src/runtime/common/: CMakeLists.txt  common.hpp  gv.hpp
src/runtime/components/: CMakeLists.txt  blind.cpp  blind.hpp  blind_state.cpp  blind_state.hpp  blind_state_test.cpp  components_registry_lua.cpp  components_registry_lua.hpp  components_registry_lua_test.cpp  light.hpp  lua_block.hpp  trigger.hpp
src/runtime/entry/: CMakeLists.txt  entry.hpp  main.cpp  null_program_factory.cpp
src/runtime/factory/: CMakeLists.txt  factory_helpers.cpp  factory_helpers.hpp  gv_factory.cpp  gv_factory.hpp  gv_factory_test.cpp  i2c_factory.cpp  i2c_factory.hpp  io_factory.cpp  io_factory.hpp  io_factory_test.cpp  modbus_factory.cpp  modbus_factory.hpp  modbus_factory_test.cpp  mqtt_io_factory.cpp  mqtt_io_factory.hpp  mqtt_io_factory_test.cpp  program_factory.cpp  program_factory.hpp  program_factory_test.cpp  runtime_factory.cpp  runtime_factory.hpp  runtime_factory_test.cpp  scheduler_factory.cpp  scheduler_factory.hpp  scheduler_factory_test.cpp  scheduler_impl.hpp
src/runtime/factory/test/: test_program.lua  test_program_blind.lua  test_program_with_blind.lua  test_program_with_library.lua
src/runtime/private/: io_impl.hpp  mqtt_impl.hpp  runtime_impl.hpp  scheduler_impl.hpp
src/runtime/runtime/: CMakeLists.txt  common.hpp  mqtt_impl.cpp  program.hpp  program_lua.cpp  program_lua.hpp  program_lua_test.cpp  runtime.hpp  runtime_impl.hpp  scheduler.hpp  scheduler_impl.hpp  task_io.hpp  task_io_bus.hpp  task_io_mqtt.cpp  task_io_mqtt.hpp
src/runtime/runtime/test/: test_program_with_blind.lua
src/runtime/scheduler/: CMakeLists.txt  scheduler.hpp
src/runtime/system/: CMakeLists.txt  circular_buffer.hpp  i2c_bus.hpp  i2c_dev_test.cpp  io_if.hpp  messages_buffer_test.cpp  modbus.cpp  modbus_dev.hpp  mqtt.cpp  mqtt.hpp  mqtt_c.cpp  mqtt_c.hpp  mqtt_pp.cpp  mqtt_pp.hpp  mqtt_test.cpp  signal.cpp  signal.hpp
src/runtime/test/: catch2wrapper.cpp
src/scheduler/: CMakeLists.txt  lua_program.cpp  lua_program.hpp  scheduler.cpp  scheduler.hpp
src/system/: CMakeLists.txt  i2c_bus.hpp  i2c_dev.hpp  i2c_dev_test.cpp  io_if.hpp  messages_buffer_test.cpp  modbus.cpp  modbus.hpp  mqtt.cpp  mqtt.hpp  mqtt_test.cpp
src/test/: CMakeLists.txt  subprocess.cpp  subprocess.hpp
test/mosquitto/: .envrc  Makefile  docker-compose.yaml  env
